<resources>
    <string name="app_name">Calculator</string>
    <string name="calc_Text">12345</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="clr">CLR</string>
    <string name="add">+</string>
    <string name="Equal">=</string>
    <string name="Dot">.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>